--- a/Produkt/King.html
+++ b/Produkt/King.html
@@ -21,7 +21,7 @@
 
     <!-- Section 2 -->
     <div class="section">
-      <div class="circle-image">Bild</div>
+      <div class="circle-image"><img src="Image/Harriet1.jpg">Bild</div>
       <div class="text-block">
         <div class="button">Text 1</div>
         <div class="button">Text 2</div>
